<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/memberListFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_members" />

    <item
        android:id="@+id/financeFragment"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_finance" />

    <item
        android:id="@+id/eventListFragment"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/nav_events" />

    <item
        android:id="@+id/moreFragment"
        android:icon="@android:drawable/ic_menu_more"
        android:title="@string/nav_more" />
</menu>
